# models/CategoryLanguages.js
@@ -1,5 +1,7 @@
 import {DataTypes, Model} from "sequelize";
 import sequelize from "../services/sequelize.js";
+import {languages} from "../constants/index.js";
+import Categories from "./Categories.js";
 
 class CategoryLanguages extends Model {}
 
@@ -10,17 +12,25 @@ CategoryLanguages.init({
         allowNull: false,
         primaryKey: true,
     },
-    en: {
+    category_id: {
+        type: DataTypes.BIGINT,
+    },
+    name: {
         type: DataTypes.STRING,
     },
-    hy: {
-        type: DataTypes.STRING,
-    },
+    language: {
+        type: DataTypes.ENUM(...languages),
+    }
 }, {
     timestamps: false,
     sequelize,
-    tableName: 'categories',
-    modelName: 'categories',
+    tableName: 'category_languages',
+    modelName: 'category_languages',
 });
+
+Categories.hasOne(CategoryLanguages, {
+    foreignKey: 'category_id',
+    as: 'lang',
+})
 
 export default CategoryLanguages;
