# models/SubCategoryLanguages.js
@@ -1,7 +1,10 @@
 import {DataTypes, Model} from "sequelize";
 import sequelize from "../services/sequelize.js";
+import {languages} from "../constants/index.js";
+import SubCategories from "./SubCategories.js";
 
-class SubCategoryLanguages extends Model {}
+class SubCategoryLanguages extends Model {
+}
 
 SubCategoryLanguages.init({
     id: {
@@ -10,17 +13,25 @@ SubCategoryLanguages.init({
         allowNull: false,
         primaryKey: true,
     },
-    en: {
+    sub_category_id: {
+        type: DataTypes.BIGINT,
+    },
+    name: {
         type: DataTypes.STRING,
     },
-    hy: {
-        type: DataTypes.STRING,
-    },
+    language: {
+        type: DataTypes.ENUM(...languages),
+    }
 }, {
     timestamps: false,
     sequelize,
     tableName: 'sub_category_languages',
     modelName: 'sub_category_languages',
 });
+
+SubCategories.hasOne(SubCategoryLanguages, {
+    foreignKey: 'sub_category_id',
+    as: 'lang',
+})
 
 export default SubCategoryLanguages;
